- Fixed IL delegate issue, waterfalls are back now
- So is the Waterfalls config, turns off custom waterfalls when off