@@ -1,4 +1,5 @@
 ﻿using Terraria;
+using Terraria.ID;
 using Terraria.ModLoader;
 
 namespace Verdant.Items.Verdant.Blocks.LushWood
@@ -7,12 +8,14 @@ namespace Verdant.Items.Verdant.Blocks.LushWood
     {
         public override void SetStaticDefaults() => QuickItem.SetStatic(this, "Lush Wood Chest", "");
         public override void SetDefaults() => QuickItem.SetBlock(this, 16, 16, ModContent.TileType<Tiles.Verdant.Decor.LushFurniture.VerdantWoodChest>());
+
         public override void AddRecipes()
         {
-            Recipe r = CreateRecipe(1);
-            r.AddIngredient(ModContent.ItemType<VerdantWoodBlock>(), 8);
-            r.AddRecipeGroup("IronBar", 2);
-            r.Register();
+            CreateRecipe()
+                .AddIngredient(ModContent.ItemType<VerdantWoodBlock>(), 8)
+                .AddRecipeGroup(RecipeGroupID.IronBar, 2)
+                .AddTile(TileID.WorkBenches)
+                .Register();
         }
     }
 }
