@@ -14,7 +14,7 @@ namespace Verdant.Items.Verdant.Materials
             VerdantPlayer.ItemDrawLayerEvent += PlayerDraw;
         }
 
-        public override void SetDefaults() => QuickItem.SetMaterial(this, 22, 24, ItemRarityID.White);
+        public override void SetDefaults() => QuickItem.SetMaterial(this, 22, 24, ItemRarityID.White, noUseGraphic: true);
         public override void SetStaticDefaults() => QuickItem.SetStatic(this, "Lightbulb", "'Keeps Charlie away'");
         public override void HoldItem(Player player) => Lighting.AddLight(player.MountedCenter - new Vector2(0, 28), new Vector3(0.1f, 0.03f, 0.06f) * 12);
         public override void PostUpdate() => Lighting.AddLight(Item.position, new Vector3(0.1f, 0.03f, 0.06f) * 9);
