@@ -1,6 +1,6 @@
 displayName = Verdant
 author = GabeHasWon
-version = 0.1.1.3
+version = 0.1.1.4
 dllReferences = StructureHelper
 hideCode = false
 hideResources = false
